--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Node
-# "yarn.lock" file is used instead of "package-lock.json"
 /node_modules/
 /npm-debug.log
 /yarn-error.log
+/yarn.lock
 /package-lock.json
